[package]
name = "hnsw"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode2 = "2.0.1"
hdf5 = "0.8.1"
hdf5-sys = { version = "0.8.1", features = ["static"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
pq = { path = "pq" }

[profile.release]
debug = true
split-debuginfo = "packed"
